Implement improved error logging and user notifications
Remove usages of SneakyThrows and NoCatch
add global exception handler
add buisness exceptions